# kore-bridge

./: README.md  pyproject.toml
examples/: demo_llm.py
src/kore_bridge/: __init__.py  bridge.py  experiment.py  providers.py  router.py
tests/: test_bridge.py  test_experiment.py  test_router.py
