[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kore-bridge"
version = "0.1.0"
description = "LLM integration layer for kore-mind. Runtime-agnostic cognitive bridge."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "iafiscal" },
]
keywords = ["llm", "memory", "identity", "cognitive", "ai", "bridge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "kore-mind>=0.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
all = ["openai>=1.0", "anthropic>=0.20"]
dev = ["pytest>=7.0", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/kore_bridge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
